[gd_scene load_steps=11 format=3 uid="uid://cef5e0g05466l"]

[ext_resource type="Script" uid="uid://4a6xy0uewb4" path="res://map_with_sets/OnOffOption.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dee4kxgl2q2e2" path="res://assets/map/cards/bomb.png" id="2"]
[ext_resource type="Texture2D" uid="uid://1lchoky7ymxj" path="res://assets/map/cards/checkbox_empty.png" id="3"]
[ext_resource type="Texture2D" uid="uid://btr7gbdrroogk" path="res://assets/map/cards/checkbox_true.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c1snl7l5s676t" path="res://assets/map/cards/checkbox_blank.png" id="5"]
[ext_resource type="FontFile" uid="uid://bsdjbpjy1umxj" path="res://assets/fonts/bungee/BungeeLayers-Regular.otf" id="6"]
[ext_resource type="AudioStream" uid="uid://bi38pkb44oyyx" path="res://assets/audio/UI_effects/switch-selection.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://iudauhck757d" path="res://assets/audio/UI_effects/GUI_Notification 16.wav" id="8"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"true",
"speed": 5.0
}]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="OnOffCell" type="Node2D" groups=["map_point"]]
position = Vector2(200, -600)
script = ExtResource("1")
active = true
value_name = "hive_bombs"
global_option = false
node_owner_path = NodePath("../../..")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -30)
texture = ExtResource("2")

[node name="CheckBox" type="AnimatedSprite2D" parent="."]
position = Vector2(84, -84)
frames = SubResource("1")
animation = "true"
playing = true

[node name="Label" type="Label" parent="."]
offset_left = -90.0
offset_top = 25.0
offset_right = 86.0
offset_bottom = 78.0
theme_override_fonts/font = SubResource("2")
text = "{_} VICTORIES"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="switch_on" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7")
attenuation = 0.0412346

[node name="switch_off" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8")
attenuation = 0.0412346
